# pixiline

./: .gitignore  LICENSE  README.md  config.yaml  pixi.toml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  tests.yml
docs/: credits.md  faq.md  index.md  inputs.md  jobs.md  loading.md  steps.md
docs/quickstart/: installation.md  launch.md
docs/stylesheets/: extra.css
docs/writing-a-pipeline/: branching.md  external-scripts.md  index.md  settings.md  single-step.md  two-steps.md
resources/models/: awake_classifier.rds
resources/models/yolo-portia/yolo26m_seg_1280_20260327/: args.yaml
resources/scripts/: preprocess.R  probe_fps.nu  segment.R
resources/scripts/R/: changepoints.R  classification.R  features.R  io.R  segment-features.R
scripts/: screenshots.py
src/: orchestrator.nu
src/pixiline/: __init__.py  __main__.py  _smoketest.py  app.py  applog.py  config.py  manifest.py  paths.py
src/pixiline/gui/: __init__.py  activity_bar.py  card.py  constants.py  dag_view.py  drop_screen.py  jobs_panel.py  list_card.py  main_window.py  pipeline_view.py  pipelines_sidebar.py  status_strip.py  terminal.py  theme.py
src/pixiline/jobs/: __init__.py  job.py  queue.py  termlog.py  worker.py
src/raggui/: __main__.py  _smoketest.py  app.py  applog.py  config.py  manifest.py  paths.py  pipeline.py  resources.py
src/raggui/gui/: activity_bar.py  card.py  dag_view.py  drop_screen.py  inputs_tab.py  jobs_panel.py  list_card.py  main_window.py  pipeline_view.py  pipelines_sidebar.py  settings_tab.py  status_flash.py  status_strip.py  terminal.py  theme.py
src/raggui/jobs/: job.py  queue.py  termlog.py  worker.py
src/tools/: generate_icons.py
steps/: export.nu  motion.nu  predict.nu  preprocess.nu  render.nu  segment.nu
tests/: conftest.py  test_app.py  test_config.py  test_job.py  test_manifest.py  test_paths.py  test_queue.py  test_termlog.py
