[project]
name = "raggui"
version = "0.1.0"
description = "A generic Pixi-pipeline manager GUI."
authors = [{ name = "Mikkel Roald-Arboel" }]
readme = "README.md"
requires-python = ">=3.11"
# Runtime dependencies are provided by the Pixi environment (conda-forge), so they
# are intentionally not pinned here; this metadata is for the editable install and
# the `raggui` entry point.
dependencies = []

[project.scripts]
raggui = "raggui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raggui"]

# --- Ruff -------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming (Qt overrides carry explicit noqa)
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["raggui"]
