[project]
name = "pixiline"
version = "0.2.0"
description = "A generic Pixi-pipeline manager GUI."
authors = [{ name = "Mikkel Roald-Arboel" }]
readme = "README.md"
requires-python = ">=3.11"
# Runtime dependencies are provided by the Pixi environment (conda-forge), so they
# are intentionally not pinned here; this metadata is for the editable install and
# the `pixiline` entry point.
dependencies = []

[project.scripts]
pixiline = "pixiline.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixiline"]

# --- Pytest / coverage ------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pixiline --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["pixiline"]
# Coverage measures the orchestration core (manifest, jobs, config, paths). The
# pure-presentation widgets, the Qt/subprocess Worker, and app bootstrap need a
# real display + a live pipeline to exercise, so they are out of scope for unit
# tests and excluded from the reported figure.
omit = [
  "*/gui/*",
  "*/jobs/worker.py",
  "*/app.py",
  "*/__main__.py",
  "*/_smoketest.py",
  "*/resources.py",
  "*/applog.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

# --- Ruff -------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming (Qt overrides carry explicit noqa)
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["pixiline"]
